y.output
Terminals unused in grammar

    '+'
    '-'
    '*'
    '/'


Grammar

    0 $accept: program $end

    1 program: statement_list END

    2 statement_list: statement
    3               | statement_list statement

    4 statement: print_statement

    5 print_statement: ID PRINT


Terminals, with rules where they appear

    $end (0) 0
    '*' (42)
    '+' (43)
    '-' (45)
    '/' (47)
    error (256)
    ID (258) 5
    PRINT (259) 5
    END (260) 1


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    program (11)
        on left: 1
        on right: 0
    statement_list (12)
        on left: 2 3
        on right: 1 3
    statement (13)
        on left: 4
        on right: 2 3
    print_statement (14)
        on left: 5
        on right: 4


State 0

    0 $accept: • program $end

    ID  shift, and go to state 1

    program          go to state 2
    statement_list   go to state 3
    statement        go to state 4
    print_statement  go to state 5


State 1

    5 print_statement: ID • PRINT

    PRINT  shift, and go to state 6


State 2

    0 $accept: program • $end

    $end  shift, and go to state 7


State 3

    1 program: statement_list • END
    3 statement_list: statement_list • statement

    ID   shift, and go to state 1
    END  shift, and go to state 8

    statement        go to state 9
    print_statement  go to state 5


State 4

    2 statement_list: statement •

    $default  reduce using rule 2 (statement_list)


State 5

    4 statement: print_statement •

    $default  reduce using rule 4 (statement)


State 6

    5 print_statement: ID PRINT •

    $default  reduce using rule 5 (print_statement)


State 7

    0 $accept: program $end •

    $default  accept


State 8

    1 program: statement_list END •

    $default  reduce using rule 1 (program)


State 9

    3 statement_list: statement_list statement •

    $default  reduce using rule 3 (statement_list)
